--- a/eezer-backend-parent/pom.xml
+++ b/eezer-backend-parent/pom.xml
@@ -41,12 +41,21 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- logging -->
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
         <lombok.version>1.16.10</lombok.version>
         <spring.version>2.0.5.RELEASE</spring.version>
+        <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
     <build>
