Fix jar issue and more.

--- a/eezer-backend-service/src/main/resources/eezer-backend-service.properties
+++ b/eezer-backend-service/src/main/resources/eezer-backend-service.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb://admin:mongoHasse1337@ds137191.mlab.com:37191/eezer
+spring.data.mongodb.uri=mongodb://eezer_admin:admin123@ds137191.mlab.com:37191/eezer
 org.eezer.client_secret=hemligt
