--- a/eezer-backend-parent/pom.xml
+++ b/eezer-backend-parent/pom.xml
@@ -59,6 +59,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <lombok.version>1.16.10</lombok.version>
         <spring.version>2.0.5.RELEASE</spring.version>
         <slf4j.version>1.7.25</slf4j.version>
